local/sites/all/themes/sitetheme/css/views-styles.css
/* ... */
div#content-area > div.view-moderator-spotlight .user_badges img,
div#content-area > div.view-contributor-spotlight .user_badges img {
  margin:0px;
}

.view-id-articles .views-row {
  background: transparent url(/sites/all/themes/sitetheme/images/osdc_dot4x4.png) repeat-x scroll center top;
  border-bottom: none;
  margin-top: 10px;
  padding-top: 10px;
}

.view-id-articles .views-row-first {
  background: none;
  padding-top: 0;
}

.view-id-articles .views-field-field-lead-image-fid,
.view-id-articles .views-field-field-image-imceimage-path {
  float: left;
  margin-right: 15px;
}

.view-id-articles .view-articles .views-field-title {
  font-size: 16px;
  line-height: 18px;
}

.view-id-articles  .views-field-title a {
  text-decoration: none;
}

.view-id-articles .views-field-title a:hover {
  text-decoration: underline;
}

.view-id-articles .views-field-comment-count,
.view-id-articles .views-field-created {
  color: #5A5A5A;
  font-weight: bold;
  margin-top: 5px;
}

.view-id-articles .views-field-comment-count span.field-content {
  background: transparent url(../images/comment.jpg) no-repeat scroll left top;
  border-right: 1px solid;
  margin-right: 10px;
  padding-left: 20px;
  padding-right: 10px;
}

.view-id-articles .views-row,
.view-id-comments .views-row {
  margin-bottom: 25px;
}

.view-id-articles .views-field-timestamp,
.view-id-comments .views-field-timestamp {
  color: #5A5A5A;
  font-size: 0.7em;
  font-weight: bold;
}

.view-id-articles .views-field-comment,
.view-id-comments .views-field-comment {
  background: #EDEDED;
  color: #292929;
  font-size: 1.2em;
  font-weight: bold;
  margin-bottom: 10px;
  margin-top: 10px;
  padding-bottom: 1px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 1px;
}

.view-id-articles .views-field-title,
.view-id-comments .views-field-title {
  color: #292929;
  font-size: 1.1em;
  font-weight: normal;
}

